syntax = "proto3";
package iritamod.nft1155;

import "gogoproto/gogo.proto";

option go_package = "github.com/bianjieai/iritamod/modules/nft1155/types";
option (gogoproto.goproto_getters_all) = false;

message Token {
  option (gogoproto.equal) = true;

  string id = 1;
  string owner = 2;
  uint64 max_supply = 3;
  bytes metadata = 4;
}

//message Metadata {
//    string uri = 1;
//    string uri_hash = 2;
//    string data = 3;
//}

// IDCollection defines a type of collection with specified ID
message IDCollection {
  option (gogoproto.equal) = true;

  string token_ids = 1 [(gogoproto.moretags) = "yaml:\"token_ids\""];
  uint64 amount = 2 [(gogoproto.moretags) = "yaml:\"amount\""];
}

// Owner defines a type of owner
message Owner {
  option (gogoproto.equal) = true;

  string address = 1;
  repeated IDCollection id_collections = 2 [(gogoproto.moretags) = "yaml:\"idcs\"", (gogoproto.customname) = "IDCollections", (gogoproto.nullable) = false];
}
